[tool.poetry]
name = "haas-tool-box"
version = "0.1.0"
description = "Project for auto backtesting HaasOnline crypto trading bots"
authors = ["idevtier <idevtier@gmail.com>"]

packages = [
    { include = "api", from = "src" },
    { include = "cli", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
haasomeapi = "^3.2.4.1"
inquirerpy = "0.3.3"
numpy = "^1.22.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "cli.__main__:main"

